--- a/redhill/wordlist/templates/home.html
+++ b/redhill/wordlist/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to Redhill</h1>
+    <img src="{% static "wordlist/redhill.png" %}" alt="Picture of a red hill">
     <table>
         <tr>
             <th>Name</th>
